[package]
name = "rust-herpaderping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
ntapi = { version = "0.4.0", features = ["impl-default"]}
simple_logger = "4.1.0"
log = { version = "^0.4.17", features = ["std"] }


[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Networking_ActiveDirectory",
    "Win32_Security_Authentication_Identity",
]

# less binary size (~x1.5), but more compile time
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Instructs the linker to optimize at the link stage
opt-level = "z"  # Optimize for size.
codegen-units = 1

[features]
debug = []
